another fail repo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h3>my first repository.</h3>
+    <h2>i can push a code to github</h2>
+    <h1>a new code to reposite code to github.</h1>
+    <h4>hiiiiiiiiiiiiiiiiiiiiiii....</h4>
+    <p>My first github account but i can't add the new added lines. What to do?</p>
 </body>
 </html>
